# pixelbox

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
benches/: image_hashes.rs
models/: blip-config.json  blip-image-captioning-large-q4k.gguf  efficientnet-lite4-11-int8-decapped.onnx  encoder_cpu.onnx  encoder_cpu.onnx.REMOVED.git-id  style_encoder_cpu.onnx
resources/: experiment_log_20220324091130.txt  experiment_log_20220324185858.txt  experiment_log_20220324230010.txt  experiment_log_20220325082131.txt  experiment_log_20220328210648.txt  experiment_log_20220331131431.txt  experiment_log_20220407221846.txt  experiment_log_20220408211504.txt  experiment_log_20220414223534.txt  tardataset.py  train.py
src/: blip.rs  crawler.rs  engine.rs  indexed_image.rs  main.rs  ui.fl  ui.rs
src/image_hashes/: convnet.rs  efficientnet.rs  mod.rs  nomic.rs  phash.rs
src/ui/: folders.rs  image_grid.rs  image_table.rs  menutabs.rs  mod.rs  search.rs  search_panel.rs  settings.rs  start.rs  view.rs
