[package]
name = "pixelbox"
version = "0.1.0"
authors = ["Joseph Catrambone <jo.jcat@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0"  # For convenient Result types.  Can switch to Enums with inner-error captures later on.
crossbeam = "0.8.4"
eframe = "0.33.2" # Gives us egui, epi and web+native backends
egui_extras = "0.33.2"
glob = "0.3.3"
image = "0.25.9"
kamadak-exif = "0.6.1"
lazy_static = "1.5.0"
open = "5.3.3"
qoi = "0.4.1"
#rayon = "1.11.0"
rfd = "0.17.2"
rusqlite = { version="0.38.0", features=["bundled", "functions", "hooks", "serde_json"] } # bundled uses bundled version for Windows.  blob feature might be needed for io.
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = "1.0.145"
tract-onnx = "0.22.0"

time = "0.3.44"

[dev-dependencies]
criterion = "~0.5"  # To run benchmarks.  When the nightly bits are merged, we can remove this.

[features]
default = []
#cuda = ["candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
#cudnn = ["candle/cudnn"]

#[[bench]]
#name = "image_hashes"
#harness = false

[profile.dev.package."*"]
opt-level = 3  # Non-crate packages should be built with high optimization.